video fixed on mobile device

--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -864,7 +864,7 @@ img {
         padding: 30px;
     }
     .evolution .main .video {
-        padding-right: 0;
+        padding-right: 0px;
     }
     .evolution .main .evolution_video {
         height: auto;
